figure out notation for C_x vs C wrt partial derivatives and recovering partial cost

--- a/ch2_nn_math/testing.ipynb
+++ b/ch2_nn_math/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,52 @@
     "from ops import ReLU, MeanSquaredError\n",
     "\n",
     "np.random.seed(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4]\n",
+      "30\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.arange(1, 5)\n",
+    "print(x)\n",
+    "print(np.dot(x, x))\n",
+    "\n",
+    "lst = []\n",
+    "for ele in x:\n",
+    "    lst.append(ele * ele)\n",
+    "\n",
+    "print(sum(lst))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# (W^{l+1}_jk)^T DOT d_^{l+1}j HADAMARD phi(z_j)\n",
+    "# C_k1 HADAMARD \n",
+    "# j = num_neurons_in_cur_layer = 2\n",
+    "# k = num_neurons_in_prev_layer = 3\n",
+    "# o         o     \n",
+    "#           o          o\n",
+    "# o         o \n",
+    "#       j=3, k=2    j=1, k=3\n",
+    "# (W^{l+1}_13)^T DOT d^{l+1}_1 H phi(z_3)\n",
+    "# W^{l+1}_31 DOT d^{l+1}_1 H phi(z_3)\n",
+    "# C_3 H Phi(z_3)"
    ]
   },
   {
